# flecs-dash-amalgamated

./: CMakeLists.txt  README.md
src/: flecs_monitor.c  flecs_rest.c
